--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+#idea bin
+bin/
+.idea/
+
+#bat sh
+*.bat
+*.sh
+
+#html
+*.html
+src/test.html
+build_linux.bat
+*.bat
+*.html
